# planning-with-files

./: .gitignore  README.md
.github/workflows/: acceptance.yml  tests.yml
docs/: P1-first-test.md  P1-provisioning.md  P1-teardown.md  deploy-readiness-worksheet.md  repo-topology.md
examples/ledger/: run-loop.sh
examples/ledger/_reference/: __init__.py  entry.py  money.py  post.py  posting.py  report.py
examples/ledger/locked/: plan.json  sealed_check.py
examples/ledger/workspace/: AGENT_TASK.md
examples/toy/: run-experiment.sh  run-loop.sh
examples/toy/_attacks/: README.md  eq_true.py  makereport_flip.py
examples/toy/_reference/: core.py
examples/toy/locked/: plan.json  sealed_check.py
examples/toy/workspace/: AGENT_TASK.md
grill-me-sessions/: redesign-plan-with-files.md
infra/: app.py  aspects.py  cdk.json  pyproject.toml
infra/bootstrap/: cloud-init.yaml  gov.env.example  gov.settings.json  squid-cloud-init.yaml  squid-test1-priming.conf.snippet
infra/bootstrap/sudoers.d/: pwfg
infra/bootstrap/units/: pwfg-boot-assert.service  pwfg-egress-lock.service  pwfg-imds-lock.service  pwfg-key-fetch.service  pwfg-loop.service  pwfg-prime.service  pwfg-proxy.service
infra/stacks/: agent_host_stack.py  egress_stack.py  iam_stack.py  network_stack.py
infra/tests/: test_synth.py
proxy/: __init__.py  app.py  core.py  pyproject.toml
proxy/tests/: fake_upstream.py  test_core.py
skill/: SKILL.md
skill/lib/: common.sh
skill/schema/: plan.schema.json
tests/: test_boundary.sh  test_harness.sh  test_ledger.sh  test_orchestrator.sh  test_proxy.sh
(+20 files in other folders)
