[project]
name = "pwfg-infra"
version = "0.1.0"
description = "AWS CDK (Python) for the Phase-1 autonomous-agent host: isolated VPC, least-priv IAM, and the Graviton instance with IMDS locked down."
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib>=2.140,<3",
    "constructs>=10,<11",
    "cdk-nag>=2.28",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
