[project]
name = "pwfg-proxy"
version = "0.1.0"
description = "Loopback brokering proxy for the autonomous-agent host: hides the Anthropic key, enforces a hard cost cap + kill switch, and writes a per-request audit log."
requires-python = ">=3.13"
dependencies = [
    "starlette>=0.37",
    # <1 keeps the AsyncClient(proxy=...) API stable (proxies= was removed in 0.28);
    # the forward-proxy chaining through Squid relies on the singular proxy= kwarg.
    "httpx>=0.28,<1",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = false
